crates/swift-bridge-macro/tests/ui/unrecognized-opaque-type-attribute.stderr
error: Unrecognized attribute "InvalidAttribute".
 --> tests/ui/unrecognized-opaque-type-attribute.rs:7:24
  |
7 |         #[swift_bridge(InvalidAttribute)]
  |                        ^^^^^^^^^^^^^^^^
